--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -62,7 +62,7 @@
     <!-- Settings tab -->
     <string name="settings_group_framework">Framework</string>
     <string name="settings_enable_resources">Schakel resource-hooks in</string>
-    <string name="settings_enable_resources_summary"><b>Waarschuwing:</b> Resource-hooks zijn verouderd</string>
+    <string name="settings_enable_resources_summary"><b>Waarschuwing:</b> Resource-hooks zijn experimenteel</string>
 
     <!-- Support tab -->
 
