--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -62,7 +62,7 @@
     <!-- Settings tab -->
     <string name="settings_group_framework">Framework</string>
     <string name="settings_enable_resources">Aktivieren Sie die Ressourcen-Hooks</string>
-    <string name="settings_enable_resources_summary"><b>Warnung:</b> Ressourcen-Hooks sind veraltet</string>
+    <string name="settings_enable_resources_summary"><b>Warnung:</b> Ressourcen-Hooks sind experimentell</string>
 
     <!-- Support tab -->
 
