[app] Update info dialog

--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ This file is part of LSPosed.
   ~
   ~ LSPosed is free software: you can redistribute it and/or modify
@@ -106,7 +105,6 @@
     <string name="settings_group_theme">主題</string>
     <string name="settings_enable_resources">啟用資源鉤子</string>
     <string name="settings_enable_resources_summary"><b>警告: </b> 資源鈎子為實驗性的特性</string>
-    <string name="settings_variant">變體</string>
     <string name="menu_show_system_apps">系統應用</string>
     <string name="menu_sort">排序…</string>
     <string name="enable_module">啟用模組</string>
