--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -91,9 +91,6 @@
     <string name="loading">正在加载…</string>
     <string name="scroll_bottom">滚动到底部</string>
 
-    <string name="android_sdk" translatable="false">Android %2$s (%1$s, API %3$d)</string>
-    <string name="android_sdk_preview" translatable="false">Android %1$s Preview</string>
-
     <!-- LSPd related -->
     <string name="compile_speed_msg">优化中…</string>
     <string name="compile_done">优化完成。</string>
@@ -117,7 +114,6 @@
     <string name="sort_by_update_time">更新时间</string>
     <string name="sort_by_update_time_reverse">更新时间（降序）</string>
     <string name="settings_group_theme">主题</string>
-    <string name="settings_variant">变体</string>
     <string name="menu_show_system_apps">系统应用</string>
     <string name="menu_sort">排序…</string>
     <string name="enable_module">启用模块</string>
@@ -184,5 +180,10 @@
     <string name="module_uninstalled">已卸载%1$s</string>
     <string name="module_uninstall_failed">卸载失败</string>
     <string name="repo_load_failed">模块仓库加载失败：%s</string>
-    <string name="repo_load_more_failed">更旧的版本加载失败：%s</string>
+    <string name="info_api_version">API 版本</string>
+    <string name="info_framework_version">框架版本</string>
+    <string name="info_manager_version">管理器版本</string>
+    <string name="info_system_version">系统版本</string>
+    <string name="info_device">设备</string>
+    <string name="info_system_abi">系统架构</string>
 </resources>
