--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="dns_over_http">DNS over HTTPS</string>
     <string name="dns_over_http_summary">Workaround DNS poisoning in some nations</string>
     <string name="theme_color">Theme color</string>
+    <string name="theme_color_summary">Color that appears most frequently in the app</string>
 
     <!-- Module Repo -->
     <string name="module_readme">Readme</string>
