--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,6 @@
 
     <!-- MainActivity -->
     <string name="info">Info</string>
-    <string name="Activated">%s Activated</string>
     <string name="Install">Install</string>
     <string name="InstallDetail">Tap to install LSPosed</string>
     <string name="Modules">Modules</string>
@@ -38,9 +37,13 @@
     <string name="module_repo_summary">Module repository (Alpha)</string>
     <string name="about_view_source_code"><![CDATA[View source code at %s<br/>Join our %s channel]]></string>
 
+    <string name="activated">Activated</string>
     <string name="not_installed">Not installed</string>
     <string name="selinux_permissive">&lt;b&gt;WARNING:&lt;\/b&gt; SELinux is not enforcing! the malicious program that attacks this can completely control your device and may cause your property damage and legal liability.</string>
     <string name="selinux_permissive_summary">SELinux is not enforcing!</string>
+    <string name="partial_activated">Partially activated</string>
+    <string name="selinux_policy_not_loaded_summary">SEPolicy is not loaded properly</string>
+    <string name="selinux_policy_not_loaded">&lt;b&gt;WARNING:&lt;\/b&gt; SEPolicy is not loaded properly, modules that hook System Framework will not work.</string>
     <string name="info_api_version">API version</string>
     <string name="info_framework_version">Framework version</string>
     <string name="info_manager_version">Manager version</string>
