[app] Fix ZH-CN translation (#325)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -19,7 +19,6 @@
   -->
 
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
-    <string name="app_name" translatable="false">LSPosed</string>
     <string name="Install">安装</string>
     <string name="InstallDetail">点按安装 LSPosed</string>
     <string name="Modules">模块</string>
@@ -93,8 +92,6 @@
     <!-- LSPd related -->
     <string name="compile_speed_msg">优化中…</string>
     <string name="compile_done">优化完成。</string>
-
-    <string name="about_source" translatable="false">https://github.com/LSPosed/LSPosed/</string>
 
     <string name="pref_title_disable_verbose_log">禁用详细日志</string>
     <string name="logs_cannot_read">无法读取日志: \n</string>
@@ -190,4 +187,6 @@
     <string name="partial_activated">部分激活</string>
     <string name="selinux_policy_not_loaded_summary">SEPolicy 未被正确加载</string>
     <string name="selinux_policy_not_loaded">&lt;b&gt;警告:&lt;\/b&gt; SEPolicy 未被正确加载，作用于系统框架的模块将不起作用。</string>
+    <string name="NotInstall">未安装</string>
+    <string name="NotInstallDetail">LSPosed 未安装</string>
 </resources>
