--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="module_repo">Repository</string>
     <string name="module_repo_summary">Module repository (Alpha)</string>
     <string name="about_view_source_code"><![CDATA[View source code at %s<br/>Join our %s channel]]></string>
+    <string name="about_translators">Translators: %s</string>
 
     <string name="activated">Activated</string>
     <string name="not_installed">Not installed</string>
@@ -169,7 +170,6 @@
     <string name="module_release_no_more">No more release</string>
     <string name="repo_load_failed">Failed to load module repo: %s</string>
 
-
     <string name="about_source" translatable="false">https://github.com/LSPosed/LSPosed/</string>
 
     <string name="app_destroyed">This application has been destroyed, please make sure you download it from the official source.</string>
@@ -178,4 +178,5 @@
     <string name="verbose_log_not_avaliable">Verbose log is not available, if you just enabled it without reboot, try again after reboot.</string>
     <string name="NotInstall">Not Installed</string>
     <string name="NotInstallDetail">LSPosed is not Installed</string>
+    <string name="translators"><![CDATA[<a href="https://github.com/LSPosed/LSPosed">LSPosed</a>]]></string>
 </resources>
